--- a/analysis/metrics_utilization.ipynb
+++ b/analysis/metrics_utilization.ipynb
@@ -31,41 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "ef8372ad",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     ranks_per_node size        time    system      type benchmark  \\\n",
-      "0                32   15   40.164242  daint-mc  baseline    lulesh   \n",
-      "1                32   20  119.262162  daint-mc  baseline    lulesh   \n",
-      "2                32   18   78.404440  daint-mc  baseline    lulesh   \n",
-      "3                32   15   41.416544  daint-mc  baseline    lulesh   \n",
-      "4                32   18   78.451751  daint-mc  baseline    lulesh   \n",
-      "..              ...  ...         ...       ...       ...       ...   \n",
-      "42                1    W    0.119223  daint-mc  baseline       nas   \n",
-      "106               1    W    0.125919  daint-mc  baseline       nas   \n",
-      "51                1    W    0.125373  daint-mc  baseline       nas   \n",
-      "142               1    W    0.123291  daint-mc  baseline       nas   \n",
-      "105               1    W    0.125389  daint-mc  baseline       nas   \n",
-      "\n",
-      "    application        benchmark-type  ranks  nodes  \n",
-      "0        lulesh  (LULESH, LULESH, 15)     64      2  \n",
-      "1        lulesh  (LULESH, LULESH, 20)     64      2  \n",
-      "2        lulesh  (LULESH, LULESH, 18)     64      2  \n",
-      "3        lulesh  (LULESH, LULESH, 15)     64      2  \n",
-      "4        lulesh  (LULESH, LULESH, 18)     64      2  \n",
-      "..          ...                   ...    ...    ...  \n",
-      "42           mg          (NAS, MG, W)      1      1  \n",
-      "106          mg          (NAS, MG, W)      1      1  \n",
-      "51           mg          (NAS, MG, W)      1      1  \n",
-      "142          mg          (NAS, MG, W)      1      1  \n",
-      "105          mg          (NAS, MG, W)      1      1  \n",
-      "\n",
-      "[768 rows x 10 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m data \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m spread \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;241m32\u001b[39m]:\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mglob\u001b[49m\u001b[38;5;241m.\u001b[39mglob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(BASE_PATH, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/baseline/daint_mc/lulesh_64/lulesh_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspread\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/lulesh_*.out\u001b[39m\u001b[38;5;124m'\u001b[39m)):\n\u001b[1;32m     13\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(f, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[1;32m     14\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines_that_start_with(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mElapsed time\u001b[39m\u001b[38;5;124m\"\u001b[39m, fp):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'glob' is not defined"
      ]
     }
    ],
