--- a/analysis/metrics_utilization.ipynb
+++ b/analysis/metrics_utilization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "15d29874",
    "metadata": {},
    "outputs": [],
@@ -31,19 +31,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ef8372ad",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'glob' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m data \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m spread \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;241m32\u001b[39m]:\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mglob\u001b[49m\u001b[38;5;241m.\u001b[39mglob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(BASE_PATH, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/baseline/daint_mc/lulesh_64/lulesh_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspread\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/lulesh_*.out\u001b[39m\u001b[38;5;124m'\u001b[39m)):\n\u001b[1;32m     13\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(f, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[1;32m     14\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines_that_start_with(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mElapsed time\u001b[39m\u001b[38;5;124m\"\u001b[39m, fp):\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'glob' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ranks_per_node size        time    system      type benchmark  \\\n",
+      "0                32   15   40.164242  daint-mc  baseline    lulesh   \n",
+      "1                32   20  119.262162  daint-mc  baseline    lulesh   \n",
+      "2                32   18   78.404440  daint-mc  baseline    lulesh   \n",
+      "3                32   15   41.416544  daint-mc  baseline    lulesh   \n",
+      "4                32   18   78.451751  daint-mc  baseline    lulesh   \n",
+      "..              ...  ...         ...       ...       ...       ...   \n",
+      "42                1    W    0.119223  daint-mc  baseline       nas   \n",
+      "106               1    W    0.125919  daint-mc  baseline       nas   \n",
+      "51                1    W    0.125373  daint-mc  baseline       nas   \n",
+      "142               1    W    0.123291  daint-mc  baseline       nas   \n",
+      "105               1    W    0.125389  daint-mc  baseline       nas   \n",
+      "\n",
+      "    application        benchmark-type  ranks  nodes  \n",
+      "0        lulesh  (LULESH, LULESH, 15)     64      2  \n",
+      "1        lulesh  (LULESH, LULESH, 20)     64      2  \n",
+      "2        lulesh  (LULESH, LULESH, 18)     64      2  \n",
+      "3        lulesh  (LULESH, LULESH, 15)     64      2  \n",
+      "4        lulesh  (LULESH, LULESH, 18)     64      2  \n",
+      "..          ...                   ...    ...    ...  \n",
+      "42           mg          (NAS, MG, W)      1      1  \n",
+      "106          mg          (NAS, MG, W)      1      1  \n",
+      "51           mg          (NAS, MG, W)      1      1  \n",
+      "142          mg          (NAS, MG, W)      1      1  \n",
+      "105          mg          (NAS, MG, W)      1      1  \n",
+      "\n",
+      "[768 rows x 10 columns]\n"
      ]
     }
    ],
@@ -200,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "id": "da319281",
    "metadata": {},
    "outputs": [
@@ -215,24 +237,24 @@
       "3            20              A                    bt                4   \n",
       "4            20              A                    bt                4   \n",
       "...         ...            ...                   ...              ...   \n",
-      "2599         18              B                    ep                2   \n",
-      "2600         18              B                    ep                2   \n",
-      "2601         18              B                    ep                2   \n",
-      "2602         18              B                    ep                2   \n",
-      "2603         18              B                    ep                2   \n",
+      "3892         18              B                    ep                2   \n",
+      "3893         18              B                    ep                2   \n",
+      "3894         18              B                    ep                2   \n",
+      "3895         18              B                    ep                2   \n",
+      "3896         18              B                    ep                2   \n",
       "\n",
-      "      colocated-time   main-time main-application main-benchmark  \\\n",
-      "0          17.021830  119.809474           lulesh         lulesh   \n",
-      "1          16.988172  119.809474           lulesh         lulesh   \n",
-      "2          16.759310  119.564690           lulesh         lulesh   \n",
-      "3          17.202335  121.780733           lulesh         lulesh   \n",
-      "4          17.353254  119.485431           lulesh         lulesh   \n",
-      "...              ...         ...              ...            ...   \n",
-      "2599       11.872719   78.980841           lulesh         lulesh   \n",
-      "2600       11.873238   78.980841           lulesh         lulesh   \n",
-      "2601       11.873665   77.603412           lulesh         lulesh   \n",
-      "2602       11.873699   77.755197           lulesh         lulesh   \n",
-      "2603       11.873645   77.755197           lulesh         lulesh   \n",
+      "      colocated-time   main-time main-rep main-application main-benchmark  \\\n",
+      "0          17.021830  119.809474        8           lulesh         lulesh   \n",
+      "1          16.988172  119.809474        8           lulesh         lulesh   \n",
+      "2          16.759310  119.564690        9           lulesh         lulesh   \n",
+      "3          17.202335  121.780733        6           lulesh         lulesh   \n",
+      "4          17.353254  119.485431        7           lulesh         lulesh   \n",
+      "...              ...         ...      ...              ...            ...   \n",
+      "3892       11.872719   78.980841        4           lulesh         lulesh   \n",
+      "3893       11.873238   78.980841        4           lulesh         lulesh   \n",
+      "3894       11.873665   77.603412        2           lulesh         lulesh   \n",
+      "3895       11.873699   77.755197        6           lulesh         lulesh   \n",
+      "3896       11.873645   77.755197        6           lulesh         lulesh   \n",
       "\n",
       "      main-ranks_per_node  main-ranks    system        type  \\\n",
       "0                      32          64  daint-mc  colocation   \n",
@@ -241,11 +263,11 @@
       "3                      32          64  daint-mc  colocation   \n",
       "4                      32          64  daint-mc  colocation   \n",
       "...                   ...         ...       ...         ...   \n",
-      "2599                   32          64  daint-mc  colocation   \n",
-      "2600                   32          64  daint-mc  colocation   \n",
-      "2601                   32          64  daint-mc  colocation   \n",
-      "2602                   32          64  daint-mc  colocation   \n",
-      "2603                   32          64  daint-mc  colocation   \n",
+      "3892                   32          64  daint-mc  colocation   \n",
+      "3893                   32          64  daint-mc  colocation   \n",
+      "3894                   32          64  daint-mc  colocation   \n",
+      "3895                   32          64  daint-mc  colocation   \n",
+      "3896                   32          64  daint-mc  colocation   \n",
       "\n",
       "     colocated-benchmark  nodes   main-benchmark-type  \\\n",
       "0                    nas      2  (LULESH, LULESH, 20)   \n",
@@ -254,11 +276,11 @@
       "3                    nas      2  (LULESH, LULESH, 20)   \n",
       "4                    nas      2  (LULESH, LULESH, 20)   \n",
       "...                  ...    ...                   ...   \n",
-      "2599                 nas      2  (LULESH, LULESH, 18)   \n",
-      "2600                 nas      2  (LULESH, LULESH, 18)   \n",
-      "2601                 nas      2  (LULESH, LULESH, 18)   \n",
-      "2602                 nas      2  (LULESH, LULESH, 18)   \n",
-      "2603                 nas      2  (LULESH, LULESH, 18)   \n",
+      "3892                 nas      2  (LULESH, LULESH, 18)   \n",
+      "3893                 nas      2  (LULESH, LULESH, 18)   \n",
+      "3894                 nas      2  (LULESH, LULESH, 18)   \n",
+      "3895                 nas      2  (LULESH, LULESH, 18)   \n",
+      "3896                 nas      2  (LULESH, LULESH, 18)   \n",
       "\n",
       "     colocated-benchmark-type  colocated-ranks_per_node  \n",
       "0                (NAS, BT, A)                         2  \n",
@@ -267,13 +289,13 @@
       "3                (NAS, BT, A)                         2  \n",
       "4                (NAS, BT, A)                         2  \n",
       "...                       ...                       ...  \n",
-      "2599             (NAS, EP, B)                         1  \n",
-      "2600             (NAS, EP, B)                         1  \n",
-      "2601             (NAS, EP, B)                         1  \n",
-      "2602             (NAS, EP, B)                         1  \n",
-      "2603             (NAS, EP, B)                         1  \n",
+      "3892             (NAS, EP, B)                         1  \n",
+      "3893             (NAS, EP, B)                         1  \n",
+      "3894             (NAS, EP, B)                         1  \n",
+      "3895             (NAS, EP, B)                         1  \n",
+      "3896             (NAS, EP, B)                         1  \n",
       "\n",
-      "[2604 rows x 17 columns]\n"
+      "[3897 rows x 18 columns]\n"
      ]
     }
    ],
@@ -320,16 +342,22 @@
     "        rep = n.split('_')[-1].split('.')[-3]\n",
     "        lulesh_path = os.path.join(os.path.dirname(f), f'lulesh_{lulesh_size}_{rep}.out')\n",
     "        #print(lulesh_path)\n",
+    "        \n",
+    "        \n",
     "        with open(lulesh_path, 'r') as fp:\n",
+    "            lulesh_time = None\n",
     "            for line in lines_that_contain(\"Elapsed\", fp):\n",
     "                lulesh_time = float(line.split()[-2])\n",
+    "            if lulesh_time is None:\n",
+    "                print(f\"Ignore not existing {lulesh_path}\")\n",
+    "                continue\n",
     "        \n",
     "        with open(f, 'r') as fp:\n",
     "            for line in lines_that_contain(\"in seconds\", fp):\n",
-    "                data.append([l_size, bench_size, app, p_map[app][bench_size], float(line.split()[-1]), lulesh_time])\n",
+    "                data.append([l_size, bench_size, app, p_map[app][bench_size], float(line.split()[-1]), lulesh_time, rep])\n",
     "                \n",
     "                \n",
-    "colocated_nas = pd.DataFrame(data=data, columns=['main-size', 'colocated-size', 'colocated-application', 'colocated-ranks', 'colocated-time', 'main-time'])\n",
+    "colocated_nas = pd.DataFrame(data=data, columns=['main-size', 'colocated-size', 'colocated-application', 'colocated-ranks', 'colocated-time', 'main-time', 'main-rep'])\n",
     "colocated_nas['main-application'] = 'lulesh'\n",
     "colocated_nas['main-benchmark'] = 'lulesh'\n",
     "colocated_nas['main-ranks_per_node'] = 32\n",
