--- a/analysis/gpu_utilization.ipynb
+++ b/analysis/gpu_utilization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,12 @@
     "#sns.set(rc={'figure.figsize':(8,4), 'figure.autolayout': True})\n",
     "sns.set(rc={'figure.figsize':(8,3.5), 'figure.autolayout': True})\n",
     "sns.set_style(\"whitegrid\")\n",
-    "data_path = '../datasets/titan_rur/'"
+    "data_path = '../../titan_rur/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
