--- a/analysis/openmc.ipynb
+++ b/analysis/openmc.ipynb
@@ -96,33 +96,33 @@
       "8         5.335696\n",
       "16       12.020193\n",
       "32       23.671842\n",
-      "[<matplotlib.lines.Line2D object at 0x7fa9bec73d30>, <matplotlib.lines.Line2D object at 0x7fa9bed13940>, <matplotlib.lines.Line2D object at 0x7fa9bcb3d900>] ['d', 's', 'r']\n"
+      "[<matplotlib.lines.Line2D object at 0x7f0a168efd60>, <matplotlib.lines.Line2D object at 0x7f0a1698fa00>, <matplotlib.lines.Line2D object at 0x7f0a169b59c0>] ['d', 's', 'r']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_212926/970521001.py:138: FutureWarning: \n",
+      "/tmp/ipykernel_842577/2768863978.py:138: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=('ci', 95)` for the same effect.\n",
       "\n",
       "  sns.lineplot(data=x['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/970521001.py:138: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
+      "/tmp/ipykernel_842577/2768863978.py:138: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
       "  sns.lineplot(data=x['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/970521001.py:146: FutureWarning: \n",
+      "/tmp/ipykernel_842577/2768863978.py:146: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=('ci', 95)` for the same effect.\n",
       "\n",
       "  sns.lineplot(data=x2['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/970521001.py:146: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
+      "/tmp/ipykernel_842577/2768863978.py:146: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
       "  sns.lineplot(data=x2['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/970521001.py:154: FutureWarning: \n",
+      "/tmp/ipykernel_842577/2768863978.py:154: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=('ci', 95)` for the same effect.\n",
       "\n",
       "  sns.lineplot(data=x3['time'],\n",
-      "/tmp/ipykernel_212926/970521001.py:154: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
+      "/tmp/ipykernel_842577/2768863978.py:154: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
       "  sns.lineplot(data=x3['time'],\n"
      ]
     },
@@ -344,7 +344,7 @@
     "ax.legend(handles[0:3], ['OpenMP', 'rFaaS', 'OpenMP + rFaaS'],ncol=3, bbox_to_anchor=(1.0, -0.55),# ncol=3, \n",
     "             loc='lower right', fontsize=14)\n",
     "#ax[0].legend().set_visible(False)\n",
-    "fig.savefig(os.path.join(\"plots\", \"openmc_speedup_new_large.pdf\"),bbox_inches='tight',pad_inches = 0, transparent=False)\n",
+    "fig.savefig(os.path.join(\"plots\", \"faas\", \"openmc_speedup_new_large.pdf\"),bbox_inches='tight',pad_inches = 0, transparent=False)\n",
     "#plt.show()\n",
     "\n",
     "\n"
@@ -454,33 +454,33 @@
       "16    13.772225\n",
       "32    20.156795\n",
       "Name: time, dtype: float64\n",
-      "[<matplotlib.lines.Line2D object at 0x7faa501828c0>, <matplotlib.lines.Line2D object at 0x7fa9ba1a1810>, <matplotlib.lines.Line2D object at 0x7fa9ba1a3820>] ['d', 's', 'r']\n"
+      "[<matplotlib.lines.Line2D object at 0x7f0a11ec39a0>, <matplotlib.lines.Line2D object at 0x7f0a11e6d990>, <matplotlib.lines.Line2D object at 0x7f0a11e6f9a0>] ['d', 's', 'r']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_212926/884447159.py:133: FutureWarning: \n",
+      "/tmp/ipykernel_842577/4079117255.py:133: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=('ci', 95)` for the same effect.\n",
       "\n",
       "  sns.lineplot(data=x['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/884447159.py:133: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
+      "/tmp/ipykernel_842577/4079117255.py:133: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
       "  sns.lineplot(data=x['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/884447159.py:141: FutureWarning: \n",
+      "/tmp/ipykernel_842577/4079117255.py:141: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=('ci', 95)` for the same effect.\n",
       "\n",
       "  sns.lineplot(data=x2['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/884447159.py:141: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
+      "/tmp/ipykernel_842577/4079117255.py:141: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
       "  sns.lineplot(data=x2['time'],#x=\"worker\", y=\"time\", data=x,\n",
-      "/tmp/ipykernel_212926/884447159.py:149: FutureWarning: \n",
+      "/tmp/ipykernel_842577/4079117255.py:149: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=('ci', 95)` for the same effect.\n",
       "\n",
       "  sns.lineplot(data=x3['time'],\n",
-      "/tmp/ipykernel_212926/884447159.py:149: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
+      "/tmp/ipykernel_842577/4079117255.py:149: UserWarning: Ignoring `palette` because no `hue` variable has been assigned.\n",
       "  sns.lineplot(data=x3['time'],\n"
      ]
     },
@@ -697,7 +697,7 @@
     "ax.legend(handles[0:3], ['OpenMP', 'rFaaS', 'OpenMP + rFaaS'],ncol=3, bbox_to_anchor=(1.0, -0.55),# ncol=3, \n",
     "             loc='lower right', fontsize=14)\n",
     "#ax[0].legend().set_visible(False)\n",
-    "fig.savefig(os.path.join(\"plots\", \"openmc_speedup_new_small.pdf\"),bbox_inches='tight',pad_inches = 0, transparent=False)\n",
+    "fig.savefig(os.path.join(\"plots\", \"faas\", \"openmc_speedup_new_small.pdf\"),bbox_inches='tight',pad_inches = 0, transparent=False)\n",
     "#plt.show()\n",
     "\n",
     "\n"
